<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_dashboard"
        android:icon="@android:drawable/ic_menu_view"
        android:title="@string/nav_dashboard" />
    <item
        android:id="@+id/nav_groups"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/nav_groups" />
    <item
        android:id="@+id/nav_placeholder"
        android:icon="@android:drawable/ic_input_add"
        android:title=""
        android:enabled="false" />
    <item
        android:id="@+id/nav_activity"
        android:icon="@android:drawable/ic_menu_recent_history"
        android:title="@string/nav_activity" />
    <item
        android:id="@+id/nav_settings"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="@string/nav_settings" />
</menu>
